<resources>
    <string name="app_name">xxmaster</string>
    <string name="title_activity_login">LoginActivity</string>

    <!--注册-->
    <string name="register_title">注册账号</string>
    <string name="register_text">注   册</string>
    <string name="register_email_hint">邮箱</string>
    <string name="register_pwd_hint">密码</string>
    <string name="register_again_pwd">重复密码</string>

    <!--登录-->
    <string name="login_text">登   录</string>
    <string name="login_email_hint">邮箱</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_register">注册账号</string>
    <string name="login_lost_pwd">忘记密码</string>

    <!--侧滑菜单-->
    <string name="user_name">Jorble</string>
    <string name="item_news">新闻</string>
    <string name="item_im">实时通信</string>
    <string name="item_fece">人脸识别</string>
    <string name="item_ofo">骑行</string>
    <string name="item_setting">设置</string>

    <!--设置页-->
    <string name="setting_messgepush">消息推送</string>
    <string name="setting_about">关于</string>

    <!--新闻详情-->
    <string name="news_details">新闻详情</string>

    <!-- ofo -->
    <string name="add_bike">新增</string>
    <string name="bike_id_empty">车牌号不能为空</string>
    <string name="bike_id_error">车牌号个数不对</string>
    <string name="bike_pwd_empty">车密码不能为空</string>
    <string name="bike_pwd_error">车密码为4位数</string>
    <string name="add_success">添加成功</string>
    <string name="bike_id_not_exist">没有该车牌号码,为您转到ofo</string>

    <!--推送页-->
    <string name="ban_msgpush">禁止推送</string>

</resources>
