<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register.RegisterActivity">

    <!--标题栏-->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height"
        >
        <ImageButton
            android:id="@+id/register_back_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_back_left"
            android:src="@mipmap/back"
            android:background="#00000000"/>
        <TextView
            style="@style/TextStyle1"
            android:text="@string/register_title"/>
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <include layout="@layout/divider"/>

    <!--注册-->
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/register_email_et"
            style="@style/EditTextStyle"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="80%"
            android:layout_margin="3dp"
            android:maxLength="20"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email_hint"
            />
        <EditText
            android:id="@+id/register_pwd_et"
            style="@style/EditTextStyle"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="80%"
            android:maxLength="20"
            android:inputType="textPassword"
            android:layout_margin="3dp"
            android:hint="@string/register_pwd_hint"
            />
        <EditText
            android:id="@+id/register_again_pwd_et"
            style="@style/EditTextStyle"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="80%"
            android:maxLength="20"
            android:inputType="textPassword"
            android:layout_margin="3dp"
            android:hint="@string/register_again_pwd"
            />
        <Button
            android:id="@+id/register_bt"
            style="@style/ButtonStyle"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="80%"
            android:layout_margin="3dp"
            android:text="@string/register_text"/>
    </com.zhy.android.percent.support.PercentLinearLayout>
</LinearLayout>
