<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <!--软件标志-->
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/icon"/>
    </com.zhy.android.percent.support.PercentLinearLayout>

    <!--登录-->
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/email_et"
            style="@style/EditTextStyle"
            app:layout_heightPercent="20%"
            app:layout_widthPercent="80%"
            android:layout_margin="3dp"
            android:maxLength="20"
            android:inputType="textEmailAddress"
            android:hint="@string/login_email_hint"
            />
        <EditText
            android:id="@+id/password_et"
            style="@style/EditTextStyle"
            app:layout_heightPercent="20%"
            app:layout_widthPercent="80%"
            android:maxLength="20"
            android:inputType="textPassword"
            android:layout_margin="3dp"
            android:hint="@string/login_pwd_hint"
            />
        <Button
            android:id="@+id/login_bt"
            style="@style/ButtonStyle"
            app:layout_heightPercent="20%"
            app:layout_widthPercent="80%"
            android:layout_margin="3dp"
            android:text="@string/login_text"/>
    </com.zhy.android.percent.support.PercentLinearLayout>


    <!--注册、找回-->
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/login_register"
            android:textSize="@dimen/TextSize2"
            android:textColor="@drawable/col_textview"
            android:clickable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center"
            android:text="|"
            android:textSize="@dimen/TextSize2"/>
        <TextView
            android:id="@+id/lostpwd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/login_lost_pwd"
            android:textSize="@dimen/TextSize2"
            android:textColor="@drawable/col_textview"
            android:clickable="true"/>
    </com.zhy.android.percent.support.PercentLinearLayout>
</LinearLayout>
