<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/green"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp" 
        android:paddingTop="10dp">

        <com.jor.xxmaster.view.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/head"
            app:border_color="#FFffffff"
            app:border_width="1dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="28.0dip"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/profile_image"
            android:gravity="center_vertical"
            android:paddingLeft="15.0dip"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="14.0sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@color/white" />

    <!--新闻-->
    <TextView
        android:id="@+id/tvNews"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/item_news"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@color/white" />

    <!--人脸识别-->
    <TextView
        android:id="@+id/tvFace"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/item_fece"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@color/white" />

    <!--ofo-->
    <TextView
        android:id="@+id/tvOfo"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/item_ofo"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@color/white" />

    <!--设置-->
    <TextView
        android:id="@+id/tvSetting"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/item_setting"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@color/white" />

</LinearLayout>